samples/_failures_safe/1760887761_212d75_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0fe7d60e.c: In function ‘main’:
./samples/SAFE/__tmp_0fe7d60e.c:154:9: error: expected declaration or statement at end of input
  154 |         }
      |         ^
./samples/SAFE/__tmp_0fe7d60e.c:154:9: error: expected declaration or statement at end of input
